--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,37 +86,16 @@ body {
     margin-right: 5px;
 }
 
+.section-one {
+    
+}
+
 .section-one-ceep-img-mobile {
     display: none;
     width: 100%;
     padding-top: 50px;
 }
 
-.section-one-ceep-img {
-    width: 100%;
-    padding-top: 50px;
-}
-
-.section-one-text {
-    width: 450px;
-    text-align: center;
-}
-
-.section-one-button {
-    font-size: 20px;
-    padding: 15px 40px 15px 40px;
-    color: rgb(0, 0, 0);
-    background-color: #72b5e8;
-    cursor: pointer;
-    border-radius: 10px;
-    position: relative;
-    left: 33%;
-    z-index: 0;
-}
-
-.section-one-button:hover {
-    background-color: #196898;
-}
 
 .section-two {
     background-color: rgb(255, 255, 255);
@@ -157,6 +136,62 @@ body {
     cursor: pointer;
     background-color: rgb(247,231,27);
     transition: 0.5s;
+}
+
+.section-three {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 60px;
+    margin-top: 30px;
+    gap: 200px;
+}
+
+.section-three-img {
+    border: 2px solid black;
+    border-radius: 50px;
+    width: 500px;
+}
+
+.slider {
+    width: 100%;
+    position: relative;
+    display: inline-block;
+}
+
+.button-left {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    font-size: 40px;
+    color: black;
+    text-shadow: 0px 0px 5px black;
+    border-radius: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.button-right {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    font-size: 40px;
+    color: black;
+    text-shadow: 0px 0px 5px black;
+    border-radius: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.mySlides {
+    width: 100%;
+    padding-top: 50px;
+    transition: 1s;
+}
+
+.section-three-logo {
+    width: 350px;
 }
 
 .footer-main {
