--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Potta+One&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -86,10 +87,6 @@ body {
     margin-right: 5px;
 }
 
-.section-one {
-    
-}
-
 .section-one-ceep-img-mobile {
     display: none;
     width: 100%;
@@ -109,7 +106,7 @@ body {
 
 .section-two-tittle {
     text-align: center;
-    font-family: 'Lobster', cursive;
+    font-family: 'Potta One', cursive;
     margin-bottom: 30px;
     font-size: 40px;
 }
@@ -163,31 +160,33 @@ body {
 .button-left {
     position: absolute;
     top: 50%;
-    left: 20px;
-    font-size: 40px;
+    left: 30px;
+    font-size: 30px;
     color: black;
     text-shadow: 0px 0px 5px black;
-    border-radius: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
+    border-radius: 100%;
+    padding-left: 13px;
+    padding-right: 13px;
+    cursor: pointer;
 }
 
 .button-right {
     position: absolute;
     top: 50%;
     right: 20px;
-    font-size: 40px;
+    font-size: 30px;
     color: black;
     text-shadow: 0px 0px 5px black;
-    border-radius: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
+    border-radius: 100%;
+    padding-left: 13px;
+    padding-right: 13px;
+    cursor: pointer;
 }
 
 .mySlides {
+    display: none;
     width: 100%;
-    padding-top: 50px;
-    transition: 1s;
+    padding-top: 60px;
 }
 
 .section-three-logo {
@@ -204,6 +203,8 @@ body {
     padding-top: 50px;
     padding-bottom: 50px;
     color: white;
+
+
 }
 
 .footer-chield {
@@ -236,18 +237,9 @@ body {
 
 /*QUEM SOMOS*/
 
-.header-quemsomos {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 300px;
-    background-color: rgb(128, 0, 0);
-}
-
 .header-quemsomos-img {
     margin-top: 70px;
-    width: 200px;
+    width: 100%;
 }
 
 .sobre {
@@ -257,7 +249,7 @@ body {
 }
 
 .sobre-title {
-    font-family: 'Lobster', cursive;
+    font-family: 'Potta One', cursive;
     text-align: center;
     font-size: 40px;
     margin-top: 20px;
@@ -281,7 +273,7 @@ body {
 }
 
 .equipe-title {
-    font-family: 'Lobster', cursive;
+    font-family: 'Potta One', cursive;
     font-size: 40px;
     text-align: center;
     margin-bottom: 30px;
@@ -410,9 +402,10 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     margin-top: 50px;
     margin-bottom: 50px;
+    padding: 60px;
 }
 .ensino-chield{
     width: 550px;
@@ -440,11 +433,12 @@ body {
 
 .declaracao-container{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 50px;
     margin-top: 50px;
     margin-bottom: 50px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .declaracao-titulo{
