--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,8 +96,7 @@ body {
 
 .section-two {
     background-color: rgb(255, 255, 255);
-    padding-top: 20px;
-    padding-bottom: 50px;
+    padding: 100px;
 }
 
 .section-two-img {
@@ -137,19 +136,36 @@ body {
 
 .section-three {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
     align-items: center;
-    margin-bottom: 60px;
-    margin-top: 30px;
-    gap: 200px;
+    justify-content: center;
+    gap: 90px;
+    width: 100%;
+    margin-bottom: -4px;
+    background-image: url("/img/background.png") ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 120px;
+}   
+
+.section-three-logo {
+    width: 250px;
 }
 
 .section-three-img {
-    border: 2px solid black;
+    border: 3px solid rgb(148, 5, 5);
     border-radius: 50px;
     width: 500px;
 }
+
+.div-container {
+    position: relative;
+}
+
+.div-cont {
+    position: absolute;
+}
+
+
 
 .slider {
     width: 100%;
@@ -189,9 +205,7 @@ body {
     padding-top: 60px;
 }
 
-.section-three-logo {
-    width: 350px;
-}
+
 
 .footer-main {
     display: flex;
