--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,7 +96,7 @@ body {
 
 .section-two {
     background-color: rgb(255, 255, 255);
-    padding: 100px;
+    padding: 40px;
 }
 
 .section-two-img {
@@ -154,18 +154,8 @@ body {
 .section-three-img {
     border: 3px solid rgb(148, 5, 5);
     border-radius: 50px;
-    width: 500px;
+    width: 400px;
 }
-
-.div-container {
-    position: relative;
-}
-
-.div-cont {
-    position: absolute;
-}
-
-
 
 .slider {
     width: 100%;
@@ -180,10 +170,10 @@ body {
     font-size: 30px;
     color: black;
     text-shadow: 0px 0px 5px black;
-    border-radius: 100%;
     padding-left: 13px;
     padding-right: 13px;
     cursor: pointer;
+    background: none;
 }
 
 .button-right {
@@ -197,6 +187,7 @@ body {
     padding-left: 13px;
     padding-right: 13px;
     cursor: pointer;
+    background: none;
 }
 
 .mySlides {
