--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,8 +13,6 @@ body {
     text-decoration: none;
 }
 
-/*INDEX*/
-
 #menu {
     display: flex;
     list-style-type: none;
@@ -38,16 +36,35 @@ body {
     width: 30px;
 }
 
-
 .header-main {
     display: flex;
     position: fixed;
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 59px;
+    height: 60px;
     z-index: 1;
     background-color: rgb(255, 255, 255);
+}
+
+.header-alt {
+    background-image: url("/img/background.png");
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 80px;
+    padding-bottom: 20px;
+    gap: 30px;
+}
+
+.header-alt-img {
+    width: 100px;
+}
+
+.header-alt-text {
+    font-size: 28pt;
+    font-family: 'Potta One', cursive;
+    color: rgb(148, 5, 5);
 }
 
 .menu-item {
@@ -87,117 +104,6 @@ body {
     margin-right: 5px;
 }
 
-.section-one-ceep-img-mobile {
-    display: none;
-    width: 100%;
-    padding-top: 50px;
-}
-
-
-.section-two {
-    background-color: rgb(255, 255, 255);
-    padding: 40px;
-}
-
-.section-two-img {
-    width: 40px;
-}
-
-.section-two-tittle {
-    text-align: center;
-    font-family: 'Potta One', cursive;
-    margin-bottom: 30px;
-    font-size: 40px;
-}
-
-.section-two-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 50px;
-}
-
-.section-two-chield {
-    background-color: rgba(255, 255, 255, 0);
-    padding: 10px;
-    width: 250px;
-    border-radius: 25px;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    border: 2px solid #000000;
-    font-size: 12px;
-}
-
-.section-two-chield:hover {
-    cursor: pointer;
-    background-color: rgb(247,231,27);
-    transition: 0.5s;
-}
-
-.section-three {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 90px;
-    width: 100%;
-    margin-bottom: -4px;
-    background-image: url("/img/background.png") ;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 120px;
-}   
-
-.section-three-logo {
-    width: 250px;
-}
-
-.section-three-img {
-    border: 3px solid rgb(148, 5, 5);
-    border-radius: 50px;
-    width: 400px;
-}
-
-.slider {
-    width: 100%;
-    position: relative;
-    display: inline-block;
-}
-
-.button-left {
-    position: absolute;
-    top: 50%;
-    left: 30px;
-    font-size: 30px;
-    color: black;
-    text-shadow: 0px 0px 5px black;
-    padding-left: 13px;
-    padding-right: 13px;
-    cursor: pointer;
-    background: none;
-}
-
-.button-right {
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    font-size: 30px;
-    color: black;
-    text-shadow: 0px 0px 5px black;
-    border-radius: 100%;
-    padding-left: 13px;
-    padding-right: 13px;
-    cursor: pointer;
-    background: none;
-}
-
-.mySlides {
-    display: none;
-    width: 100%;
-    padding-top: 60px;
-}
-
-
-
 .footer-main {
     display: flex;
     align-items: center;
@@ -208,8 +114,6 @@ body {
     padding-top: 50px;
     padding-bottom: 50px;
     color: white;
-
-
 }
 
 .footer-chield {
@@ -238,250 +142,4 @@ body {
 
 .gov-img {
     width: 170px;
-}
-
-/*QUEM SOMOS*/
-
-.header-quemsomos-img {
-    margin-top: 70px;
-    width: 100%;
-}
-
-.sobre {
-    margin-left: 30px;
-    margin-right: 30px;
-    text-align: justify;
-}
-
-.sobre-title {
-    font-family: 'Potta One', cursive;
-    text-align: center;
-    font-size: 40px;
-    margin-top: 20px;
-}
-
-.table {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    width: 40%;
-    position: relative;
-    left: 30%;
-    margin-bottom: 30px;
-}
-
-.item-table {
-    padding: 4px;
-    width: 400px;
-
-}
-
-.equipe-title {
-    font-family: 'Potta One', cursive;
-    font-size: 40px;
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.nome-table {
-    background-color: rgba(128, 128, 128, 0.137);
-}
-
-/*PORTAL DO ALUNO */
-
-.body-login {
-    background-color: rgb(170, 5, 5);
-}
-
-.login-container {
-    border: 1px solid black;
-    border-radius: 20px;
-    width: 350px;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    background-color: white;
-}
-
-.login-title {
-    margin-bottom: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 25px;
-}
-
-.login-img {
-    width: 100px;
-}
-
-.login-button {
-    width: 100%;
-    background-color: rgb(170, 5, 5);
-    padding: 10px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: white;
-    text-align: center;
-    font-size: 15px;
-    margin-bottom: 12px;
-}
-
-.login-link {
-    text-align: center;
-    font-size: 15px;
-    color: black;
-    background-color: rgb(170, 5, 5);
-    width: 100%;
-    padding-top: 9px;
-    padding-bottom: 9px;
-    padding-left: 43%;
-    padding-right: 43%;
-    border-radius: 10px;
-    font-size: 15px;
-    color: white;
-}
-
-.login-link:hover {
-    background-color: rgb(214, 0, 0);
-    transition: 0.3s;
-}
-
-.login-buttons {
-    margin-top: 20px;
-    width: 100%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.login-esquecisenha {
-    padding-top: 10px;
-    color: black;
-}
-
-.login-esquecisenha:hover {
-    color: rgb(214, 0, 0);
-}
-
-.login-button:hover {
-    background-color: rgb(214, 0, 0);
-    transition: 0.3s;
-}
-
-.input {
-    font-size: 15px;
-    width: 100%;
-    border: 1px solid black;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-.login-logo {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-/* ENSINO PROFISSIONALIZANTE */
-
-.ensino-titulo{
-    font-family:Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-size: 20px;
-    margin-top: 20px;
-    margin: 10px;
-}
-.ensino-descricao{
-    font-family:Arial, Helvetica, sans-serif;
-    text-align: justify;
-    font-size: 17px;
-    margin-top: 20px;
-    margin: 10px;
-}
-.ensino-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    padding: 60px;
-}
-.ensino-chield{
-    width: 550px;
-    border: 2px solid black;
-    border-radius: 20px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.ensino-button {
-    background-color: rgb(128, 0, 0);
-    color: white;
-    padding: 10px;
-    text-align: center;
-    border-radius: 10px;
-}
-
-.ensino-button:hover {
-    background-color: rgb(214, 0, 0);
-}
-
-/*DECLARACAO*/
-
-.declaracao-container{
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    flex-direction: column;
-    align-items: center;
-}
-
-.declaracao-titulo{
-
-    font-family:Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-size: 20px;
-    margin-top: 20px;
-    margin: 30px;
-
-}
-
-.declaracao-chield{
-    width: 550px;
-    border: 2px solid black;
-    border-radius: 20px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.declaracao-descricao{
-    font-family:Arial, Helvetica, sans-serif;
-    text-align: justify;
-    font-size: 17px;
-    margin-top: 20px;
-    margin: 10px;
-}
-
-.declaracao-button{
-    background-color: rgb(128, 0, 0);
-    color: white;
-    padding: 10px;
-    text-align: center;
-    border-radius: 10px;
-}
-
-.declaracao-button:hover{
-    background-color: rgb(214, 0, 0);
 }
