--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -44,16 +44,16 @@
         display: none;
     }
 
-    .section-three {
+    .section-two {
         gap: 40px;
     }
    
-    .section-three-logo {
+    .section-two-logo {
         width: 200px;
     }
 
 
-    .section-one-ceep-img {
+    .home-banner-ceep-img {
         width: 100%;
         height: 500px;
         display: none;
@@ -67,7 +67,7 @@
     }
 
 
-    .section-one-text {
+    .home-banner-text {
         width: 350px;
     }
 
@@ -82,11 +82,11 @@
 }
 
 @media screen and (max-width: 1020px) {
-    .section-three {
+    .section-two-container {
         flex-direction: column;
     }
 
-    .section-three-img {
+    .section-two-img {
         border: 3px solid rgb(148, 5, 5);
         border-radius: 50px;
         width: 350px;
