--- a/static/css/home.css
+++ b/static/css/home.css
@@ -14,8 +14,8 @@ body {
 
 .home-slider {
     width: 100%;
-    height: 500px;
     padding-top: 30px;
+    margin-bottom: 35%;
 }
 
 .home-slider-li {
