--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,7 +110,7 @@ body {
     justify-content: center;
     gap: 60px;
     flex-wrap: wrap;
-    background-color: rgb(128, 0, 0);
+    background-color: rgb(158, 0, 0);
     padding-top: 50px;
     padding-bottom: 50px;
     color: white;
@@ -142,4 +142,22 @@ body {
 
 .gov-img {
     width: 170px;
+}
+
+.oficina {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    font-size: 12pt;
+
+}
+
+.oficina button {
+    padding: 10px;
+    border-radius: 20px;
+    cursor: pointer;
+    color: black;
 }
